<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3mm">

        <TextView
            style="@style/item"
            android:text="@string/address" />

        <EditText
            android:id="@+id/address"
            style="@style/item"
            android:text="192.168.1.109" />

        <TextView
            style="@style/item"
            android:text="@string/port" />

        <EditText
            android:id="@+id/port"
            style="@style/item"
            android:text="8000" />

        <TextView
            style="@style/item"
            android:text="@string/secret" />

        <EditText
            android:id="@+id/secret"
            style="@style/item"
            android:password="true"
            android:text="" />

        <Button
            android:id="@+id/btn_connect"
            style="@style/item"
            android:text="@string/connect" />

        <Button
            android:id="@+id/btn_disconnect"
            style="@style/item"
            android:text="@string/disconnect" />

    </LinearLayout>
</ScrollView>
